# DZO2019

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
cv01/: CMakeLists.txt  main.cpp  pch.cpp  pch.h
cv02/: CMakeLists.txt  main.cpp
cv03/: CMakeLists.txt  convolution.cpp  convolution.h  convolutionmask.h  main.cpp
cv04/: CMakeLists.txt  main.cpp  timer.cpp  timer.h
cv05/: CMakeLists.txt  fouriertransform.cpp  fouriertransform.h  main.cpp
cv06/: CMakeLists.txt  fouriertransform.cpp  fouriertransform.h  main.cpp  timer.h
cv07/: CMakeLists.txt  main.cpp
cv08/: CMakeLists.txt  main.cpp
cv09/: CMakeLists.txt  main.cpp
cv10/: CMakeLists.txt  main.cpp
cv11/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp  pch.cpp
