CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(DZO2019)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

# Where to find CMake modules and OpenCV
SET(OpenCV_DIR "C:/opencv-4.1.1/mingw-build/install_release")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
INCLUDE(MacroOpenCV)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE(Doxygen)

IF (DOXYGEN_FOUND)
  SET(DOXYGEN_INPUT ${SOURCE_FILES})
  SET(DOXYGEN_OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
  
  ADD_CUSTOM_COMMAND(
    OUTPUT ${DOXYGEN_OUTPUT}
    COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
    COMMAND ${CMAKE_COMMAND} -E echo "Done."
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DEPENDS ${DOXYGEN_INPUT}
  )
  
  ADD_CUSTOM_TARGET(apidoc ALL DEPENDS ${DOXYGEN_OUTPUT})
  
  ADD_CUSTOM_TARGET(apidoc_forced
                    COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
                    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
                    COMMAND ${CMAKE_COMMAND} -E echo "Done."
                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                    )
ENDIF (DOXYGEN_FOUND)

ADD_SUBDIRECTORY(cv01)
ADD_SUBDIRECTORY(cv02)
ADD_SUBDIRECTORY(cv03)
ADD_SUBDIRECTORY(cv04)
ADD_SUBDIRECTORY(cv07)
ADD_SUBDIRECTORY(cv08)
ADD_SUBDIRECTORY(cv09)
ADD_SUBDIRECTORY(cv10)
ADD_SUBDIRECTORY(template)

FILE(COPY images DESTINATION ${CMAKE_BINARY_DIR})